fix documentation and R CMD check issues

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Description: Create 'shiny' app interfaces for 'SpaDES' models.
 URL:
     http://spades-shiny.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.shiny
-Date: 2018-03-20
+Date: 2018-04-03
 Version: 0.1.0.9001
 Authors@R: c(
       person("Alex M", "Chubaty", email = "alex.chubaty@gmail.com",
@@ -53,6 +53,7 @@ Imports:
     shinycssloaders,
     shinydashboard,
     shinyjs,
+    shinyWidgets,
     sp,
     SpaDES.core (>= 0.1.0),
     stringi (>= 1.1.3),
