--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,8 +156,10 @@ importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
 importFrom(raster,cellFromXY)
+importFrom(raster,crop)
 importFrom(raster,crs)
 importFrom(raster,endCluster)
+importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,filename)
 importFrom(raster,hist)
@@ -238,13 +240,16 @@ importFrom(shiny,validate)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
 importFrom(shinyBS,bsModal)
+importFrom(shinyWidgets,pickerInput)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
 importFrom(shinyjs,onclick)
 importFrom(shinyjs,runjs)
 importFrom(shinyjs,useShinyjs)
+importFrom(sp,CRS)
 importFrom(sp,SpatialPoints)
+importFrom(sp,bbox)
 importFrom(sp,spTransform)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
