--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     grDevices,
     leaflet,
     magrittr,
+    memoise,
     methods,
     packrat,
     purrr,
@@ -56,6 +57,7 @@ Imports:
     shinyWidgets,
     sp,
     SpaDES.core (>= 0.1.0),
+    stats,
     stringi (>= 1.1.3),
     stringr,
     tools,
