--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(export)
 export(exportUI)
 export(gdal2Tiles)
 export(getSubtable)
+export(getSubtableMem)
 export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
@@ -119,6 +120,7 @@ importFrom(googleAuthR,with_shiny)
 importFrom(googleID,get_user_info)
 importFrom(googledrive,as_id)
 importFrom(grDevices,dev.cur)
+importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,mtext)
@@ -149,6 +151,7 @@ importFrom(leaflet,renderLeaflet)
 importFrom(leaflet,setView)
 importFrom(leaflet,tileOptions)
 importFrom(magrittr,"%>%")
+importFrom(memoise,memoise)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(quickPlot,"setColors<-")
@@ -251,6 +254,7 @@ importFrom(sp,CRS)
 importFrom(sp,SpatialPoints)
 importFrom(sp,bbox)
 importFrom(sp,spTransform)
+importFrom(stats,na.omit)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
 importFrom(tools,package_dependencies)
