--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
 importFrom(shiny,h4)
 importFrom(shiny,hr)
+importFrom(shiny,htmlOutput)
 importFrom(shiny,icon)
 importFrom(shiny,imageOutput)
 importFrom(shiny,includeMarkdown)
