RM CMD check cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,8 @@ importFrom(googleAuthR,with_shiny)
 importFrom(googleID,get_user_info)
 importFrom(googledrive,as_id)
 importFrom(grDevices,dev.cur)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -256,6 +258,7 @@ importFrom(sp,SpatialPoints)
 importFrom(sp,bbox)
 importFrom(sp,spTransform)
 importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
 importFrom(tools,package_dependencies)
