--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,8 @@ export(tilesUpdater)
 export(timeSeriesofRasters)
 export(timeSeriesofRastersUI)
 export(updateConfig)
+export(uploadPolygon)
+export(uploadPolygonUI)
 export(visualizeDataTable)
 export(visualizeDataTableUI)
 export(visualizePolygons)
@@ -164,6 +166,7 @@ importFrom(raster,cellFromXY)
 importFrom(raster,crop)
 importFrom(raster,crs)
 importFrom(raster,endCluster)
+importFrom(raster,extension)
 importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,filename)
@@ -174,6 +177,7 @@ importFrom(raster,ncell)
 importFrom(raster,res)
 importFrom(raster,rowColFromCell)
 importFrom(raster,sampleRegular)
+importFrom(raster,shapefile)
 importFrom(raster,writeRaster)
 importFrom(raster,xmax)
 importFrom(raster,xmin)
@@ -184,6 +188,7 @@ importFrom(reproducible,Cache)
 importFrom(reproducible,Copy)
 importFrom(reproducible,asPath)
 importFrom(reproducible,checkPath)
+importFrom(rgeos,gBuffer)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,a)
@@ -198,6 +203,7 @@ importFrom(shiny,div)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,eventReactive)
+importFrom(shiny,fileInput)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
@@ -211,6 +217,7 @@ importFrom(shiny,invalidateLater)
 importFrom(shiny,is.reactive)
 importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
+importFrom(shiny,modalDialog)
 importFrom(shiny,need)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
@@ -228,6 +235,7 @@ importFrom(shiny,renderUI)
 importFrom(shiny,req)
 importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
+importFrom(shiny,showModal)
 importFrom(shiny,sidebarLayout)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,sliderInput)
@@ -236,6 +244,7 @@ importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shiny,textInput)
 importFrom(shiny,textOutput)
 importFrom(shiny,titlePanel)
 importFrom(shiny,uiOutput)
@@ -261,6 +270,7 @@ importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
+importFrom(tools,file_path_sans_ext)
 importFrom(tools,package_dependencies)
 importFrom(utils,as.person)
 importFrom(utils,as.personList)
@@ -271,6 +281,7 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(utils,unzip)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
 importFrom(whisker,whisker.render)
