update poly chooser and friends; new polyList class

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,6 +98,8 @@ Collate:
     'leaflet.R'
     'libInit.R'
     'pkgInfo.R'
+    'polygonList.R'
+    'uploadPolygon.R'
     'polygonChooser.R'
     'polygonsUpdater.R'
     'rastersOverTime.R'
@@ -111,7 +113,6 @@ Collate:
     'summaryPopups.R'
     'tilesUpdater.R'
     'timeSeriesofRasters.R'
-    'uploadPolygon.R'
     'visualizeDataTable.R'
     'visualizePolygons.R'
     'visualizeRaster.R'
