--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(pkgInformationUI)
 export(pkgVers)
 export(polygonChooser)
 export(polygonChooserUI)
+export(polygonList)
 export(polygonsUpdater)
 export(proj4stringLFLT)
 export(rastersOverTime)
@@ -108,6 +109,9 @@ importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,simInit)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
+importFrom(SpaDES.core,updateList)
+importFrom(SpaDES.tools,maskInputs)
+importFrom(SpaDES.tools,postProcess)
 importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
@@ -130,6 +134,8 @@ importFrom(graphics,barplot)
 importFrom(graphics,mtext)
 importFrom(graphics,plot)
 importFrom(graphics,plot.new)
+importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,layout_in_circle)
 importFrom(leaflet,JS)
 importFrom(leaflet,addEasyButton)
 importFrom(leaflet,addLayersControl)
