--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(pkgInformationUI)
 export(pkgVers)
 export(polygonChooser)
 export(polygonChooserUI)
+export(polygonList)
 export(polygonsUpdater)
 export(proj4stringLFLT)
 export(rastersOverTime)
@@ -108,6 +109,9 @@ importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,simInit)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
+importFrom(SpaDES.core,updateList)
+importFrom(SpaDES.tools,maskInputs)
+importFrom(SpaDES.tools,postProcess)
 importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
@@ -215,6 +219,7 @@ importFrom(shiny,imageOutput)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,invalidateLater)
 importFrom(shiny,is.reactive)
+importFrom(shiny,isTruthy)
 importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
 importFrom(shiny,modalDialog)
