*untested* resolve issues with NULLs in polygonLists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(proj4stringLFLT)
 export(rastersOverTime)
 export(rastersOverTimeUI)
 export(readConfig)
+export(rmNulls)
 export(shine)
 export(sidebarFooter)
 export(sidebarFooterUI)
