slicer Allow dtFull with no rows -- make correct col names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ importFrom(SpaDES.tools,postProcess)
 importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(data.table,set)
 importFrom(data.table,setkeyv)
 importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_setInstallation)
