--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(summaryPopups)
 export(tilesUpdater)
 export(timeSeriesofRasters)
 export(timeSeriesofRastersUI)
+export(unsuspendModule)
 export(updateConfig)
 export(uploadPolygon)
 export(uploadPolygonUI)
@@ -213,6 +214,7 @@ importFrom(shiny,eventReactive)
 importFrom(shiny,fileInput)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
+importFrom(shiny,getDefaultReactiveDomain)
 importFrom(shiny,h3)
 importFrom(shiny,h4)
 importFrom(shiny,hr)
@@ -230,6 +232,7 @@ importFrom(shiny,need)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
+importFrom(shiny,outputOptions)
 importFrom(shiny,p)
 importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
