--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,7 +94,6 @@ Collate:
     'export.R'
     'footers.R'
     'generator.R'
-    'helpers.R'
     'histogram.R'
     'histogramForRaster.R'
     'leaflet.R'
@@ -115,6 +114,7 @@ Collate:
     'summaryPopups.R'
     'tilesUpdater.R'
     'timeSeriesofRasters.R'
+    'unsuspendModule.R'
     'visualizeDataTable.R'
     'visualizePolygons.R'
     'visualizeRaster.R'
