--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,10 @@ environment:
   - R_VERSION: release
 
   - R_VERSION: oldrel
-    RTOOLS_VERSION: 33
+    RTOOLS_VERSION: 34
+
+  - R_VERSION: 3.4.0
+    RTOOLS_VERSION: 34
 
   - R_VERSION: 3.3.0
     RTOOLS_VERSION: 33
