--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Description: Create 'shiny' app interfaces for 'SpaDES' models.
 URL:
     http://spades-shiny.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.shiny
-Date: 2018-04-27
-Version: 0.1.0.9003
+Date: 2018-05-31
+Version: 0.1.0.9004
 Authors@R: c(
       person("Alex M", "Chubaty", email = "alex.chubaty@gmail.com",
              role = c("aut", "cre")),
@@ -103,6 +103,7 @@ Collate:
     'uploadPolygon.R'
     'polygonChooser.R'
     'polygonsUpdater.R'
+    'privacyToS.R'
     'rastersOverTime.R'
     'shine.R'
     'simInfo.R'
