--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ export(polygonChooser)
 export(polygonChooserUI)
 export(polygonList)
 export(polygonsUpdater)
+export(privacyStatement)
+export(privacyStatementUI)
 export(proj4stringLFLT)
 export(rastersOverTime)
 export(rastersOverTimeUI)
@@ -66,6 +68,8 @@ export(sliderUI)
 export(spades_expt)
 export(spades_simInit)
 export(summaryPopups)
+export(termsOfService)
+export(termsOfServiceUI)
 export(tilesUpdater)
 export(timeSeriesofRasters)
 export(timeSeriesofRastersUI)
