--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(exportUI)
 export(gdal2Tiles)
 export(getSubtable)
 export(getSubtableMem)
-export(getUserInfo)
 export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
@@ -129,8 +128,9 @@ importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
 importFrom(ggplot2,ggsave)
 importFrom(googleAuthR,Authentication)
-importFrom(googleAuthR,gar_api_generator)
 importFrom(googleAuthR,with_shiny)
+importFrom(googleID,get_user_info)
+importFrom(googleID,whitelist)
 importFrom(googledrive,as_id)
 importFrom(grDevices,dev.cur)
 importFrom(grDevices,dev.off)
