--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,8 @@ importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
 importFrom(ggplot2,ggsave)
 importFrom(googleAuthR,Authentication)
+importFrom(googleAuthR,googleAuth)
+importFrom(googleAuthR,googleAuthUI)
 importFrom(googleAuthR,with_shiny)
 importFrom(googleID,get_user_info)
 importFrom(googleID,whitelist)
