--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,8 +115,6 @@ importFrom(SpaDES.core,simInit)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(SpaDES.core,updateList)
-importFrom(SpaDES.tools,maskInputs)
-importFrom(SpaDES.tools,postProcess)
 importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
@@ -203,6 +201,8 @@ importFrom(reproducible,Cache)
 importFrom(reproducible,Copy)
 importFrom(reproducible,asPath)
 importFrom(reproducible,checkPath)
+importFrom(reproducible,maskInputs)
+importFrom(reproducible,postProcess)
 importFrom(rgeos,gBuffer)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
