--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,8 @@ importFrom(reproducible,checkPath)
 importFrom(reproducible,maskInputs)
 importFrom(reproducible,postProcess)
 importFrom(rgeos,gBuffer)
+importFrom(rmapshaper,check_sys_mapshaper)
+importFrom(rmapshaper,ms_simplify)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,a)
