--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ importFrom(data.table,is.data.table)
 importFrom(data.table,set)
 importFrom(data.table,setkeyv)
 importFrom(dplyr,filter)
+importFrom(future,future)
 importFrom(gdalUtils,gdal_setInstallation)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
@@ -169,12 +170,14 @@ importFrom(leaflet,setView)
 importFrom(leaflet,tileOptions)
 importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
+importFrom(promises,"%...>%")
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
+importFrom(raster,"crs<-")
 importFrom(raster,cellFromXY)
 importFrom(raster,crop)
 importFrom(raster,crs)
