[WIP] add slicer2 module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,8 @@ export(simObjectDiagramUI)
 export(simOutputs)
 export(simOutputsUI)
 export(slicer)
+export(slicer2)
+export(slicer2UI)
 export(slicerUI)
 export(slider)
 export(sliderUI)
