enable browser caching of leaflet tiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,7 @@ importFrom(leaflet,providerTileOptions)
 importFrom(leaflet,renderLeaflet)
 importFrom(leaflet,setView)
 importFrom(leaflet,tileOptions)
+importFrom(leaflet.extras,enableTileCaching)
 importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
 importFrom(promises,"%...>%")
