updateList and other tweaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(visualizeRaster)
 export(visualizeRasterUI)
 export(writeConfig)
 exportMethods(shine)
+exportMethods(updateList)
 import(methods)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
