more accessors and functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(histogramUI)
 export(initialMap)
 export(initialMapUI)
 export(libInit)
+export(maps)
 export(moduleInfo)
 export(moduleInfoUI)
 export(moduleParams)
@@ -49,9 +50,11 @@ export(polygonsUpdater)
 export(privacyStatement)
 export(privacyStatementUI)
 export(proj4stringLFLT)
+export(rasters)
 export(rastersOverTime)
 export(rastersOverTimeUI)
 export(readConfig)
+export(removeMap)
 export(shine)
 export(sidebarFooter)
 export(sidebarFooterUI)
@@ -74,7 +77,10 @@ export(slider)
 export(sliderUI)
 export(spades_expt)
 export(spades_simInit)
+export(spatialPoints)
+export(spatialPolygons)
 export(studyArea)
+export(studyAreaName)
 export(summaryPopups)
 export(termsOfService)
 export(termsOfServiceUI)
