--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,8 @@ matrix:
         - libv8-dev
         - gdal-bin
         - protobuf-compiler
-    before_install:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+    services:
+      - xvfb
     before_script:
     - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
     r_binary_packages:
@@ -54,9 +53,8 @@ matrix:
         - protobuf-compiler
     r_github_packages:
       - jimhester/lintr
-    before_install:
-      - export DISPLAY=:99.0
-      - sh -e /etc/init.d/xvfb start
+    services:
+      - xvfb
     before_script:
     - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
     r_binary_packages:
@@ -85,9 +83,8 @@ matrix:
         - libv8-dev
         - gdal-bin
         - protobuf-compiler
-    before_install:
-      - export DISPLAY=:99.0
-      - sh -e /etc/init.d/xvfb start
+    services:
+      - xvfb
     before_script:
     - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
     r_binary_packages:
