with prev: try removing fs on oldrel travis before install

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,10 @@ matrix:
         - protobuf-compiler
     services:
       - xvfb
+    before_install:
+      - Rscript -e 'if (isTRUE(find.package("fs", quiet = TRUE))) remove.packages("fs")'
     before_script:
-    - Rscript -e 'if (isTRUE(find.package("fs", quiet = TRUE))) remove.packages("fs")'
-    - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
+      - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
     r_binary_packages:
       - BH
       - raster
