--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ environment:
     RTOOLS_VERSION: 35
 clone_depth: 5
 build_script:
-  - Rscript -e 'install.packages(c("devtools", "data.table"), repos = "https://cran.rstudio.com", type = "source")'
+  - Rscript -e 'install.packages("data.table", repos = "https://cran.rstudio.com", type = "source")'
   - Rscript -e 'install.packages("Rserve", repos = "https://cran.rstudio.com", configure.args = "--without-server")'
   - travis-tool.sh install_deps
 test_script:
