--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Authors@R: c(
              role = "cph")
    )
 Depends:
-    R (>= 3.6)
+    R (>= 4.1)
 Imports:
     assertthat,
     data.table,
@@ -122,5 +122,6 @@ Collate:
     'visualizePolygons.R'
     'visualizeRaster.R'
     'zzz.R'
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.1
 Language: en-CA
+Roxygen: list(markdown = TRUE)
